fix: wrap .quick-reactions list to prevent the menu from popping out of small screens

--- a/src/platform/web/ui/css/themes/element/theme.css
+++ b/src/platform/web/ui/css/themes/element/theme.css
@@ -749,6 +749,7 @@ button.link {
 .menu .quick-reactions {
     display: flex;
     padding: 8px 32px 8px 8px;
+    flex-wrap: wrap;
 }
 
 .menu .quick-reactions button {
